--- a/less/scaffolding.less
+++ b/less/scaffolding.less
@@ -1,13 +1,15 @@
 body {
   width: 100%;
   max-width: 100%;
-  font-family: "Open Sans", "Arial", sans-serif;
-  font-size: 16px;
-  line-height: 26px;
+  font-family: "SF UI Display", "Arial", sans-serif;
+  font-size: 15px;
+  line-height: 21px;
   font-weight: 400;
+  color: #fff;
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+  background-color: #090F1E;
 }
 
 .footer {
@@ -25,7 +27,7 @@ a {
 }
 
 address {
-font-style: normal;
+  font-style: normal;
 }
 
 html {
@@ -74,4 +76,18 @@ button {
 .privacy_policy .button {
 	color: #F95454;
 	cursor: pointer;
+}
+
+h1 {
+  font-size: 40px;
+  line-height: 1.2;
+  font-weight: 700;
+}
+
+h2,
+.title {
+  font-family: 'Roboto', sans-serif;
+  font-size: 28px;
+  line-height: 33px;
+  font-weight: 900;
 }
