--- a/less/fonts.less
+++ b/less/fonts.less
@@ -1,15 +1,39 @@
 @font-face {
   font-weight: 400;
-  font-family: "Open Sans";
+  font-family: "SF UI Display";
   font-style: normal;
-  src: url("../fonts/opensans.woff2") format("woff2"),
-    url("../fonts/opensans.woff") format("woff");
+  src: url("../fonts/SFUIDisplay-Regular.woff2") format("woff2"),
+    url("../fonts/SFUIDisplay-Regular.woff") format("woff");
 }
 
 @font-face {
   font-weight: 700;
-  font-family: "Open Sans";
+  font-family: "SF UI Display";
   font-style: normal;
-  src: url("../fonts/opensansbold.woff2") format("woff2"),
-    url("../fonts/opensansbold.woff") format("woff");
+  src: url("../fonts/SFUIDisplay-Bold.woff2") format("woff2"),
+    url("../fonts/SFUIDisplay-Bold.woff") format("woff");
+}
+
+@font-face {
+  font-weight: 900;
+  font-family: "SF UI Display";
+  font-style: normal;
+  src: url("../fonts/SFUIDisplay-Heavy.woff2") format("woff2"),
+    url("../fonts/SFUIDisplay-Heavy.woff") format("woff");
+}
+
+@font-face {
+  font-weight: 500;
+  font-family: "SF UI Display";
+  font-style: normal;
+  src: url("../fonts/SFUIDisplay-Medium.woff2") format("woff2"),
+    url("../fonts/SFUIDisplay-Medium.woff") format("woff");
+}
+
+@font-face {
+  font-weight: 600;
+  font-family: "SF UI Display";
+  font-style: normal;
+  src: url("../fonts/SFUIDisplay-Semibold.woff2") format("woff2"),
+    url("../fonts/SFUIDisplay-Semibold.woff") format("woff");
 }
