--- a/less/blocks/wrapper.less
+++ b/less/blocks/wrapper.less
@@ -4,4 +4,9 @@
   padding-right: 15px;
   margin-left: auto;
   margin-right: auto;
+  
+  &--columns {
+    display: flex;
+    justify-content: space-between;
+  }
 }
