--- a/less/scaffolding.less
+++ b/less/scaffolding.less
@@ -109,3 +109,30 @@ h2,
     border-radius: 0px 4px 4px 0px;
   }
 }
+
+.title-2 {
+  font-weight: bold;
+  font-size: 15px;
+}
+
+.block {
+  margin-bottom: 30px;
+  padding: 30px;
+  padding-left: 26px;
+  padding-top: 20px;
+  border-radius: 12px;
+  background: linear-gradient(90deg, #1C273D 0%, #12192B 100%);
+  
+  &--light {
+    background: #EDF2FF;
+    color: #4D5362;
+    
+    h2,
+    h3,
+    h4,
+    .title,
+    .title-2 {
+      color: #090F1E;
+    }
+  }
+}
