--- a/less/blocks/content.less
+++ b/less/blocks/content.less
@@ -7,6 +7,8 @@
   .title {
     padding: 20px 26px;
     margin: 0;
+    background-color: rgba(255, 255, 255, 0.05);
+    border-radius: 12px 12px 0px 0px;
     
     &::before {
       left: 0;
