--- a/less/style.less
+++ b/less/style.less
@@ -10,3 +10,7 @@
 @import "blocks/promo";
 @import "blocks/content";
 @import "blocks/codes";
+@import "blocks/graph";
+@import "blocks/info";
+@import "blocks/benefits";
+@import "blocks/load";
