--- a/less/style.less
+++ b/less/style.less
@@ -14,3 +14,8 @@
 @import "blocks/info";
 @import "blocks/benefits";
 @import "blocks/load";
+@import "blocks/about";
+@import "blocks/comments";
+@import "blocks/faq";
+@import "blocks/footer";
+@import "blocks/social";
