--- a/less/blocks/codes.less
+++ b/less/blocks/codes.less
@@ -54,6 +54,12 @@
   font-weight: 600;
   font-size: 22px;
   color: #fff;
+  
+  img {
+    display: inline-block;
+    vertical-align: baseline;
+    margin-left: 3px;
+  }
 }
 
 .codes__links {
