--- a/less/blocks/faq.less
+++ b/less/blocks/faq.less
@@ -1,12 +1,21 @@
+.faq {
+  .title {
+    margin-bottom: 60px;
+  }
+  .title-3 {
+    color: #000;
+  }
+}
+
 .faq__list {
   .reset();
   list-style: none;
   
   li {
-    margin-bottom: 40px;
+    margin-bottom: 47px;
   }
 }
 
 .faq__btn {
-  margin-top: 67px;
+  margin-top: 73px;
 }
