--- a/less/blocks/info.less
+++ b/less/blocks/info.less
@@ -1,5 +1,6 @@
 .info__table {
   width: 100%;
+  margin-top: 50px;
   margin-bottom: 43px;
   border-collapse: collapse;
   background: #EDF2FF;
@@ -17,7 +18,7 @@
     
     &:first-child {
       position: relative;
-      width: 365px;
+      width: 375px;
       padding: 0 20px;
       color: #090F1E;
       font-weight: 600;
@@ -27,8 +28,8 @@
         position: absolute;
         top: 12px;
         bottom: 12px;
-        right: 0;
-        width: 3px;
+        right: 1px;
+        width: 4px;
         background: linear-gradient(90deg, #0195FF 0%, #0856C5 100%);
         border-radius: 2px;
       }
