--- a/less/blocks/load.less
+++ b/less/blocks/load.less
@@ -18,14 +18,20 @@
   }
 }
 
-.load__text {
+.load__intro {
   max-width: 880px;
   color: rgba(255,255,255,0.7);
+  font-size: 15px;
+  
+  p {
+    margin-top: 0;
+  }
 }
 
 .load__wrap {
   padding: 30px;
   padding-left: 26px;
+//  padding-top: 20px;
   background-image: url(../img/images/telephone.webp);
   background-repeat: no-repeat;
   background-position: bottom left;
@@ -81,7 +87,16 @@
 
 .load__text {
   margin-bottom: 9px;
+  margin-right: -5px;
   font-size: 13px;
   color: rgba(255,255,255,0.7);
   line-height: 1.4;
+}
+
+.load__img {
+  img {
+    display: block;
+    width: 100%;
+    height: auto;
+  }
 }
