--- a/less/blocks/promo.less
+++ b/less/blocks/promo.less
@@ -33,12 +33,12 @@
 }
 
 .promo__title {
-  margin-top: 23px;
+  margin-top: 25px;
   margin-bottom: 33px;
 }
 
 .promo__btns {
-  margin-top: 47px;
+  margin-top: 50px;
   display: flex;
   align-items: center;
 }
@@ -71,4 +71,8 @@
     background-color: rgba(9,15,30,0.5);
     .transition();
   }
+}
+
+.promo__text {
+  font-size: 14px;
 }
