--- a/less/blocks/benefits.less
+++ b/less/blocks/benefits.less
@@ -1,9 +1,19 @@
 .benefits {
   p {
-    margin-bottom: 35px;
+    margin-bottom: 20px;
+  }
+  .title {
+    margin-bottom: 27px;
+  }
+  .title-2 {
+    margin-top: 35px;
+    margin-bottom: 23px;
+  }
+  .block {
+    padding-right: 50px;
   }
 }
 
 .benefits__btn {
-  margin-top: 50px;
+  margin-top: 48px;
 }
