--- a/less/blocks/comments.less
+++ b/less/blocks/comments.less
@@ -34,7 +34,7 @@
   position: absolute;
   z-index: 5;
   top: -5px;
-  left: -8px;
+  left: -5px;
   width: 68px;
   height: 68px;
   display: flex;
@@ -66,8 +66,9 @@
 .comments__person {
   position: relative;
   width: 100%;
-  padding: 7px 10px;
-  padding-left: 73px;
+  padding: 10px;
+  padding-bottom: 8px;
+  padding-left: 80px;
   border-radius: 12px;
   background-color: rgba(9,15,30,0.4);
 }
@@ -75,6 +76,8 @@
 .comments__bottom {
   padding-top: 21px;
   color: rgba(255,255,255,0.8);
+  font-size: 14px;
+  line-height: 1.6;
 }
 
 .comments__name {
@@ -95,6 +98,7 @@
   bottom: 10px;
   font-size: 12px;
   color: @blue;
+//  line-height: 1;
 }
 
 .swiper-button-prev,
