--- a/less/scaffolding.less
+++ b/less/scaffolding.less
@@ -101,8 +101,8 @@ h2,
   &::before {
     content: "";
     position: absolute;
-    top: 0;
-    bottom: 0;
+    top: -3px;
+    bottom: -3px;
     left: -26px;
     width: 6px;
     background: linear-gradient(90deg, #0195FF 0%, #0856C5 100%);
@@ -113,6 +113,11 @@ h2,
 .title-2 {
   font-weight: bold;
   font-size: 15px;
+}
+
+.title-3 {
+  font-weight: 700;
+  font-size: 22px;
 }
 
 .block {
