--- a/less/blocks/promo.less
+++ b/less/blocks/promo.less
@@ -1,6 +1,16 @@
 .promo {
   padding-top: 90px;
   margin-bottom: 30px;
+  
+  &--reg {
+    .promo__title {
+      margin-top: 0;
+      margin-bottom: 20px;
+    }
+    .promo__btns {
+      margin-top: 30px;
+    }
+  }
 }
 
 .promo__block {
