--- a/less/scaffolding.less
+++ b/less/scaffolding.less
@@ -120,6 +120,12 @@ h2,
   font-size: 22px;
 }
 
+.title-4 {
+  font-size: 20px;
+  line-height: 1.2;
+  font-weight: 600;
+}
+
 .block {
   margin-bottom: 30px;
   padding: 30px;
