--- a/less/blocks/media.less
+++ b/less/blocks/media.less
@@ -11,13 +11,13 @@
     z-index: 100;
     background-color: #090F1E;
   }
-  .menu__item {
+  .header .menu__item {
     border-bottom: 1px solid rgba(255,255,255,0.05);
   }
-  .menu__item--active::after {
+  .header .menu__item--active::after {
     display: none;
   }
-  .menu__link {
+  .header .menu__link {
     padding: 18px 15px;
     color: #fff;
     font-weight: 600;
@@ -107,6 +107,10 @@
     margin-left: 3px;
     margin-right: 4px;
   }
+  .reg__quote,
+  .reg__text {
+    width: 49%;
+  }
 }
 //--------------------------------------------
 @media (max-width: 1022px) {
@@ -117,12 +121,18 @@
   .promo__info {
     max-width: 480px;
   }
+  .reg__item,
+  .reg__wrap,
   .footer .menu__list,
   .about__wrap,
   .graph__wrap,
   .wrapper--columns {
     display: block;
   }
+  .reg__info,
+  .reg__points,
+  .reg__quote,
+  .reg__text,
   .about__text,
   .about__video,
   .graph__text,
@@ -229,6 +239,21 @@
       left: 0;
       right: 0;
     }
+    .menu__item {
+      border-bottom: 1px solid rgba(255,255,255,0.05);
+    }
+    .menu__item--active::after {
+      display: none;
+    }
+  }
+  .reg__quote {
+    margin-top: 26px;
+  }
+  .reg__points {
+    margin-top: 16px;
+  }
+  .reg__btn {
+    margin-top: 50px;
   }
 }
 //--------------------------------------------
@@ -252,9 +277,9 @@
   .promo__block {
     padding: 24px 15px;
     padding-bottom: 214px;
-    background-image: url(../img/images/bg-mobile.webp);
+    background-image: url(../img/images/bg-mobile.png);
     background-position: bottom center;
-    background-size: cover;
+    background-size: contain;
   }
   .title-main,
   h1,
@@ -403,6 +428,7 @@
     padding-top: 20px;
     padding-bottom: 26px;
   }
+  .reg__btn,
   .benefits__btn,
   .info__btn,
   .graph__btn,
@@ -414,6 +440,7 @@
   }
   .header__btn {
     width: 103px;
+    padding: 0;
   }
   .graph .block {
     padding-top: 22px;
@@ -423,6 +450,35 @@
   }
   .faq__list li {
     margin-bottom: 45px;
+  }
+  .reg__quote {
+    padding: 22px 13px;
+  }
+  .reg__main {
+    padding: 12px 16px;
+  }
+  .reg__item {
+    padding: 32px 10px;
+    margin-bottom: 10px;
+  }
+  .reg__info {
+    padding-top: 0;
+  }
+  .reg__img {
+    width: 100%;
+    height: 174px;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 12px;
+    
+    img {
+      height: 100%;
+      width: auto;
+      max-width: none;
+      flex: 0 0 auto;
+    }
   }
 }
 
